force-app/main/default/objects/MMO_Request__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change To Vacant</fullName>
                </value>
                <value>
                    <fullName>Combine With Adjacent</fullName>
                </value>
                <value>
                    <fullName>Expand Suite</fullName>
                </value>
                <value>
                    <fullName>Reduce Suite</fullName>
                </value>
                <value>
                    <fullName>Replace With New Facility</fullName>
                </value>
                <value>
                    <fullName>Relocate Tenant to Another Suite</fullName>
                </value>
                <value>
                    <fullName>Split Suite into 2 Suites</fullName>
                </value>
                <value>
                    <fullName>Brand Name Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PropertyI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MMO Requests (Account)</relationshipLabel>
        <relationshipName>MMO_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MMO Requests (Account)</relationshipLabel>
        <relationshipName>MMO_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Brand Offering Found</fullName>
                </value>
                <value>
                    <fullName>Reassigned</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuiteI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MMO Requets (Account)</relationshipLabel>
        <relationshipName>MMO_Requets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suite__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MMO Requets</relationshipLabel>
        <relationshipName>MMO_Requets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MMO Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MMO Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMO Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>